added a form and controller for new adverts

--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -1,11 +1,11 @@
-<form ng-submit="login.submit()">
+<form ng-submit="auth.login()">
   <div>
     <label for="email">Email</label>
-    <input type="text" name="email" id="email" ng-model="login.credentials.email">
+    <input type="text" name="email" id="email" ng-model="auth.credentials.email">
   </div>
   <div>
     <label for="password">Password</label>
-    <input type="password" name="password" id="password" ng-model="login.credentials.password">
+    <input type="password" name="password" id="password" ng-model="auth.credentials.password">
   </div>
 
   <button>Login</button>
