--- a/src/js/views/adverts/index.html
+++ b/src/js/views/adverts/index.html
@@ -1,6 +1,10 @@
 <h1> adverts index</h1>
 <div ng-repeat="advert in advertsIndex.adverts" class="outline">
-  {{ advert }}
-  {{ advert.id }}
+  <!-- {{ advert }} -->
+  <strong>id: </strong>{{ advert.id }}<br>
+  <strong>title: </strong>{{ advert.title }}<br>
+  <strong>body: </strong>{{ advert.body }}<br>
+  <strong>Price: £ </strong>{{ advert.valueMin }} - {{ advert.valueMax }}<br>
+  <strong>Messages: </strong>{{ advert.messages }}<br>
   <button ui-sref="advertsShow({id: advert.id})">View</button>
 </div>
