--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -4,14 +4,17 @@
   <h1>Your Advert</h1>
   <strong>Title </strong>{{ advertsShow.advert.title }}<br>
   <strong>Body </strong>{{ advertsShow.advert.body }}<br>
-  <strong>Price: £ </strong>{{ advertsShow.advert.valueMax }} - {{ advertsShow.advert.valueMin }}.
+  <strong>Price range: £ </strong>{{ advertsShow.advert.valueMin }} -to- {{ advertsShow.advert.valueMax }}.
   <!-- {{ advertsShow.advert }} -->
   <button ui-sref="advertsEdit({id: advertsShow.advert.id})">Edit</button>
     <!-- <button ng-click="advert.delete()">Delete</button> -->
 </div>
-<div class="outline">
-  <h1>Results</h1>
+<div class="results">
+  <h1>Matching Results</h1>
   <div class="outline" ng-repeat="offer in advertsShow.offers">
-    {{ offer }}
+    <h3>{{ offer.title }}</h3>
+    {{ offer.body }}
+    <h4>Price: £{{ offer.value }}</h4>
+    <image class="thumbnail" src="{{ offer.image }}"></image>
   </div>
 </div>
