made a service to store temp data between states

--- a/src/js/views/messages/new.html
+++ b/src/js/views/messages/new.html
@@ -1,1 +1,5 @@
 <h1> messages new</h1>
+a message about ...
+<p ng-if="!main.isAuthenticated()">Register</p>
+<p ng-if="main.isAuthenticated()">Logout</p>
+{{ main.thisOffer }}
