--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -11,10 +11,13 @@
 </div>
 <div class="results">
   <h1>Matching Results</h1>
+  Filter by price -- Filter by distance
   <div class="outline" ng-repeat="offer in advertsShow.offers">
     <h3>{{ offer.title }}</h3>
     {{ offer.body }}
     <h4>Price: £{{ offer.value }}</h4>
     <image class="thumbnail" src="{{ offer.image }}"></image>
+    <!-- <a ui-sref="messagesNew({offerId :offer.id})"><button>Contact this seller</button></a> -->
+    <a ng-click="advertsShow.messagesNew(offer)"><button>Contact this seller</button></a>
   </div>
 </div>
