--- a/src/js/views/adverts/new.html
+++ b/src/js/views/adverts/new.html
@@ -1,10 +1,10 @@
 <h1>advertsnew</h1>
 
 <form ng-submit="advertsNew.create()">
-  <label for="title">Name</label>
-  <input type="text" id="name" name="name" ng-model="advertsNew.advert.title">
+  <label for="title">Title</label>
+  <input type="text" id="title" name="title" ng-model="advertsNew.advert.title">
 
-  <label for="body">body</label>
+  <label for="body">Body</label>
   <input type="text" id="body" name="body" ng-model="advertsNew.advert.body">
 
   <label for="valueMax">valueMax</label>
