updated offerService, made routes/pages/controllers for offers

--- a/src/js/views/adverts/new.html
+++ b/src/js/views/adverts/new.html
@@ -5,7 +5,7 @@
   <input type="text" id="title" name="title" ng-model="advertsNew.advert.title">
 
   <label for="body">Body</label>
-  <input type="text" id="body" name="body" ng-model="advertsNew.advert.body">
+  <textarea rows="4" cols="90" name="comment" ng-model="advertsNew.advert.body">.</textarea>
 
   <label for="valueMax">valueMax</label>
   <input type="number" id="valueMax" name="valueMax" ng-model="advertsNew.advert.valueMax">
