--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -10,3 +10,19 @@
 
   <button>Login</button>
 </form>
+
+username: "emily"<br>
+email: "e@e"<br>
+password: "p"<br>
+
+username: "ajay"<br>
+email: "a@a"<br>
+password: "p"<br>
+
+username: "mike"<br>
+email: "m@m"<br>
+password: "p"<br>
+
+username: "will"<br>
+email: "w@w"<br>
+password: "p"
