--- a/src/js/views/adverts/edit.html
+++ b/src/js/views/adverts/edit.html
@@ -10,7 +10,7 @@
   <input type="text" id="name" name="name" ng-model="advertsEdit.advert.title">
 
   <label for="body">body</label>
-  <input type="text" id="body" name="body" ng-model="advertsEdit.advert.body">
+  <textarea rows="4" cols="90" name="comment" ng-model="advertsEdit.advert.body">.</textarea>
 
   <label for="valueMax">valueMax</label>
   <input type="number" id="valueMax" name="valueMax" ng-model="advertsEdit.advert.valueMax">
