--- a/src/js/views/offers/new.html
+++ b/src/js/views/offers/new.html
@@ -5,13 +5,16 @@
 <form ng-submit="offersNew.create()">
 
   <label for="title">Name</label>
-  <input type="text" id="name" name="name" ng-model="offersNew.offer.title"><br>
+  <input type="text" id="title" name="title" ng-model="offersNew.offer.title"><br>
 
   <label for="body">body</label><br>
   <textarea rows="4" cols="90" name="comment" ng-model="offersNew.offer.body">.</textarea><br>
 
-  <label for="valueMax">value</label>
-  <input type="number" id="valueMax" name="valueMax" ng-model="offersNew.offer.value">
+  <label for="image">Image</label>
+  <input type="text" id="image" name="image" ng-model="offersNew.offer.image"><br>
+
+  <label for="value">value</label>
+  <input type="number" id="value" name="value" ng-model="offersNew.offer.value">
 
   <button>Create advert</button>
 </form>
