message replying from usersShow is totally rewritten and working, it needs to refresh on each message though

--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -32,7 +32,7 @@
     <button ui-sref="advertsShow({id: advert.id})">View Details</button>
     <!-- Messages Section -->
     <div class="results">
-      <strong>messages joined</strong>
+      <strong>messages joined</strong> (red is what I send)
       <div ng-class="{'outline messages_sent': usersShow.currentUser.id == message.sender_id, 'outline messages_recieved': usersShow.currentUser.id != message.sender_id}" ng-repeat="message in usersShow.currentUser.messages | orderBy : 'created_at'" ng-if="advert.id == message.advert_id">
         <strong>Subject: </strong>{{ message.subject }}<br>
         <strong>Body: </strong>{{ message.body }}<br>
@@ -41,10 +41,23 @@
         <strong>Reciever id: </strong>{{ message.reciever_id }}<br>
         <strong>advert_id: </strong>{{ message.advert_id }}<br>
         <strong>offer_id: </strong>{{ message.offer_id }}<br>
-        <a ng-show="usersShow.currentUser.id != message.sender_id" class="ng-hide" ng-click="usersShow.messagesReplyToAdvert(message.offer_id)"><button>Reply</button></a>
+        <a ng-show="usersShow.currentUser.id != message.sender_id" class="ng-hide" ng-click="usersShow.setupReply(message)"><button>Reply</button></a>
       </div>
     </div>
     <!-- Messages Section -->
+    <!-- Reply to Messages section -->
+    <div class="results">
+      <strong>messages reply</strong>
+      <form ng-submit="usersShow.replyToMessage()" id="messageForm">
+        <label for="subject">Subject</label>
+        <input type="text" id="subject" name="subject" ng-model="usersShow.reply.subject">
+
+        <textarea rows="4" cols="90" name="comment" ng-model="usersShow.reply.body" form="messageForm">Enter text here...</textarea>
+        <button>Send</button>
+      </form>
+      {{ usersShow.reply }}
+    </div>
+    <!-- Reply to Messages section -->
   </div>
 </div>
 
@@ -69,10 +82,23 @@
         <strong>Reciever id: </strong>{{ message.reciever_id }}<br>
         <strong>advert_id: </strong>{{ message.advert_id }}<br>
         <strong>offer_id: </strong>{{ message.offer_id }}<br>
-        <a ng-show="usersShow.currentUser.id != message.sender_id" class="ng-hide" ng-click="usersShow.messagesReplyToOffer(offer, message.advert_id)"><button>Reply</button></a>
+        <a ng-show="usersShow.currentUser.id != message.sender_id" class="ng-hide" ng-click="usersShow.setupReply(message)"><button>Reply</button></a>
       </div>
     </div>
     <!-- Messages section -->
+    <!-- Reply to Messages section -->
+    <div class="results">
+      <strong>messages reply</strong>
+      <form ng-submit="usersShow.replyToMessage()" id="messageForm">
+        <label for="subject">Subject</label>
+        <input type="text" id="subject" name="subject" ng-model="usersShow.reply.subject">
+
+        <textarea rows="4" cols="90" name="comment" ng-model="usersShow.reply.body" form="messageForm">Enter text here...</textarea>
+        <button>Send</button>
+      </form>
+      {{ usersShow.reply }}
+    </div>
+    <!-- Reply to Messages section -->
   </div>
 </div>
 
@@ -80,10 +106,13 @@
 <div class="results">
   <strong>messages sent</strong>
   <div class="outline messages_sent" ng-repeat="message in usersShow.currentUser.messages_sent">
+    {{ message }}<br>
     <strong>Subject: </strong>{{ message.subject }}<br>
     <strong>Body: </strong>{{ message.body }}<br>
     <strong>advert_id: </strong>{{ message.advert_id }}<br>
     <strong>offer_id: </strong>{{ message.offer_id }}<br>
+    <strong>Sender id: </strong>{{ message.sender_id }}<br>
+    <strong>Reciever id: </strong>{{ message.reciever_id }}<br>
   </div>
 </div>
 
@@ -95,6 +124,8 @@
     <strong>Body: </strong>{{ message.body }}<br>
     <strong>advert_id: </strong>{{ message.advert_id }}<br>
     <strong>offer_id: </strong>{{ message.offer_id }}<br>
+    <strong>Sender id: </strong>{{ message.sender_id }}<br>
+    <strong>Reciever id: </strong>{{ message.reciever_id }}<br>
     <!-- this isn't finished (offer)!! -->
     <a ng-click="usersShow.messagesNew(offer)"><button>Reply</button></a>
   </div>
