--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -18,6 +18,6 @@
     <h4>Price: £{{ offer.value }}</h4>
     <image class="thumbnail" src="{{ offer.image }}"></image>
     <!-- <a ui-sref="messagesNew({offerId :offer.id})"><button>Contact this seller</button></a> -->
-    <a ng-click="advertsShow.messagesNew(offer)"><button>Contact this seller</button></a>
+    <a ng-click="advertsShow.messagesNew(offer, advertsShow.advert)"><button>Contact this seller</button></a>
   </div>
 </div>
