--- a/src/js/views/offers/index.html
+++ b/src/js/views/offers/index.html
@@ -4,6 +4,8 @@
   <!-- {{ offer }} -->
   <strong>Title </strong>{{ offer.title }}<br>
   <strong>Body </strong>{{ offer.body }}<br>
-  <strong>Price: £ </strong>{{ offer.value }}.
+  <strong>Price: £ </strong>{{ offer.value }}.<br>
+  <img class="thumbnail" ng-src="{{ offer.image }}" alt="thumbnail"><br>
+
   <button ui-sref="offersShow({id: offer.id})">offer Show</button>
 </div>
