--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -4,3 +4,14 @@ would you like to
 or
 <a ui-sref="offersNew">Sell</a>
 ?
+<a ui-sref="offersShow({id: offer.id})"  ng-repeat="offer in home.offers">
+  <div class="results">
+    <!-- {{ offer }} -->
+    <strong>Title </strong>{{ offer.title }}<br>
+    <!-- <strong>Body </strong>{{ offer.body }}<br> -->
+    <strong>Price: £ </strong>{{ offer.value }}.<br>
+    <img class="thumbnail" ng-src="{{ offer.image }}" alt="thumbnail"><br>
+
+    <button>More Details</button>
+  </div>
+</a>
