--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,71 @@
 // Import all of your scss files here
 
 body {
-  width: 80vw;
-  text-align: center;
+  // width: 80vw;
   margin: 0 auto;
+}
+
+header {
+  .development {
+    background: red;
+  }
+  .header {
+    background: yellow;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-bottom: 3px solid grey;
+    letter-spacing: 1px;
+    text-align: right;
+    padding-right: 45px;
+    a {
+      margin: 0 10px;
+    }
+    .username {
+      text-transform: capitalize;
+    }
+  }
+}
+
+.button {
+  border: 0;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background: inherit;
+}
+
+.searchBar {
+  padding: 20px 0;
+  text-align: center;
+  font-size: 16px;
+  input {
+    width: 40%;
+    padding: 10px 15px;
+    border-radius: 3px;
+  }
+  button {
+    padding: 10px 15px;
+    border-radius: 3px;
+    color: white;
+    background: lightblue;
+    border: lightblue;
+  }
+}
+
+.buyOrSell {
+  button {
+    @extend .button;
+    font-size: 65px;
+    font-style: italic;
+    border-radius: 15px;
+    border: 2px solid black;
+    padding: 10px;
+    margin: 0 10px;
+  }
+  :hover {
+    cursor: pointer;
+  }
+  margin: 60px 0 30px 0;
+  text-align: center;
 
 }
 
@@ -24,6 +86,18 @@ body {
     }
   }
 }
+
+.container {
+  box-sizing: content-box;
+  border: 0px solid black;
+  text-align: justify;
+  padding: 0 30px;
+}
+
+.homepageCard {
+  display: inline-block;
+  margin: 5px auto;
+}
 .outline {
   .thumbnail {
     height: 150px;
@@ -40,3 +114,19 @@ body {
   border-color: green;
   margin-left: 80px;
 }
+
+// a:link {
+//     text-decoration: none;
+// }
+//
+// a:visited {
+//     text-decoration: none;
+// }
+//
+// a:hover {
+//     text-decoration: underline;
+// }
+//
+// a:active {
+//     text-decoration: underline;
+// }
