search is working from homepage to offersSearch page

--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -1,7 +1,7 @@
 <!--  -->
 <div class="searchBar">
   <form ng-submit="home.search()">
-    <input type="text" name="search" placeholder="Search...">
+    <input type="text" name="search" placeholder="Search..." ng-model="home.query">
     <button>Search</button>
   </form>
 </div>
