--- a/src/js/views/offers/search.html
+++ b/src/js/views/offers/search.html
@@ -1,1 +1,14 @@
 <h1>offers Search</h1>
+
+
+<div class="results">
+  <h1>Matching Results</h1>
+  Filter by price -- Filter by distance
+  <div class="outline" ng-repeat="offer in offersSearch.offers">
+    <h3>{{ offer.title }}</h3>
+    {{ offer.body }}
+    <h4>Price: £{{ offer.value }}</h4>
+    <image class="thumbnail" src="{{ offer.image }}"></image>
+    <a ng-click="advertsShow.messagesNew(offer, advertsShow.advert)"><button>Contact this seller</button></a>
+  </div>
+</div>
