added placeholders to the advertsNew page/form

--- a/src/js/views/adverts/edit.html
+++ b/src/js/views/adverts/edit.html
@@ -6,8 +6,8 @@
 <!-- {{ advertsEdit.advert }} -->
 
 <form ng-submit="advertsEdit.update()">
-  <label for="title">Name</label>
-  <input type="text" id="name" name="name" ng-model="advertsEdit.advert.title">
+  <label for="title">Title</label>
+  <input type="text" id="title" name="title" ng-model="advertsEdit.advert.title">
 
   <label for="body">body</label>
   <textarea rows="4" cols="90" name="comment" ng-model="advertsEdit.advert.body">.</textarea>
