added error messages from rootScope to display on the mainCtrl//header

--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -3,6 +3,7 @@
   <button ui-sref="advertsNew">I'm Buying</button>
 
   <button ui-sref="offersNew">I'm Selling</button>
+  <button ng-click="home.offersNew()">I'm Selling</button>
 </div>
 
 <div class="container">
